--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
-<div class="min-h-screen w-full custom-bg flex flex-col items-center justify-center gap-[50px] text-white">
-    <div class="flex flex-col gap-[24px]">
-      <p class="text-[52px] font-semibold">Find Your Trusted Expert
+<div class="min-vh-100 w-100 custom-bg d-flex flex-column align-items-center justify-content-center gap-5 text-white">
+    <div class="d-flex flex-column gap-4">
+      <p class="display-4 fw-semibold">Find Your Trusted Expert
       in the UAE</p>
       <p class="text-center">Wizbizla connects expats with service providers they can trust</p>
     </div>
-    <div class="flex gap-2">
+    <div class="d-flex gap-2">
       <app-search-input (searchValue)="setValue($event)"/>
       @if (showSubmit) {
-        <button class="bg-[#4F40FF] py-4 px-[30px] rounded" (click)="submitResult()">Submit</button>
+        <button class="btn btn-primary py-2 px-4 rounded" (click)="submitResult()">Submit</button>
       }
     </div>
 </div>
