--- a/src/app/components/search-input/search-input.component.html
+++ b/src/app/components/search-input/search-input.component.html
@@ -1,18 +1,23 @@
-<div class="flex gap-2">
+<div class="d-flex gap-2">
     <div class="search-container">
-        <div class="search-input relative rounded bg-[#FFFFFF] p-2 flex items-center">
-            <input type="text" [(ngModel)]="searchTerm" (input)="onInput()" placeholder="Search" class="text-black outline-none py-4 w-[710px] pl-5">
-            <button class="absolute left-2">🔍</button>
-            <button class="absolute right-2 bg-[#4F40FF] py-4 px-[30px] rounded">Search</button>
+        <div class="search-input position-relative rounded bg-white p-2 d-flex align-items-center">
+            <input type="text" [(ngModel)]="searchTerm" (input)="onInput()" placeholder="Search" class="form-control border-0 py-2 ps-5" style="width: 710px;">
+            <span class="position-absolute start-0 ps-3">🔍</span>
+            <button class="position-absolute end-0 me-2 btn btn-primary py-2 px-4 rounded">Search</button>
         </div>
         @if (showSearchResults) {
-            <div class="bg-white mt-2 rounded p-2 max-h-[250px] overflow-y-scroll">
+            <div class="bg-white mt-2 rounded p-2 overflow-auto" style="max-height: 250px;">
                 @if (searchResults.length > 0) {
                     @for (item of searchResults; track $index) {
-                        <div class="text-black hover:bg-blue-600 hover:text-white p-1" (click)="selectResult(item)">{{item.name}}</div>
+                        <div class="text-dark p-1 cursor-pointer" (click)="selectResult(item)" 
+                             [ngClass]="{'bg-primary text-white': hoveredItem === item}"
+                             (mouseenter)="hoveredItem = item"
+                             (mouseleave)="hoveredItem = null">
+                            {{item.name}}
+                        </div>
                     }
                 } @else {
-                    <p class="text-center text-black">No Results Found</p>
+                    <p class="text-center text-dark">No Results Found</p>
                 }
             </div>
         }
